; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_swap.c_release_swap_writer.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/power/extr_swap.c_release_swap_writer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.swap_map_handle = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.swap_map_handle*)* @release_swap_writer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @release_swap_writer(%struct.swap_map_handle* %0) #0 {
  %2 = alloca %struct.swap_map_handle*, align 8
  store %struct.swap_map_handle* %0, %struct.swap_map_handle** %2, align 8
  %3 = load %struct.swap_map_handle*, %struct.swap_map_handle** %2, align 8
  %4 = getelementptr inbounds %struct.swap_map_handle, %struct.swap_map_handle* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load %struct.swap_map_handle*, %struct.swap_map_handle** %2, align 8
  %9 = getelementptr inbounds %struct.swap_map_handle, %struct.swap_map_handle* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = ptrtoint i32* %10 to i64
  %12 = call i32 @free_page(i64 %11)
  br label %13

13:                                               ; preds = %7, %1
  %14 = load %struct.swap_map_handle*, %struct.swap_map_handle** %2, align 8
  %15 = getelementptr inbounds %struct.swap_map_handle, %struct.swap_map_handle* %14, i32 0, i32 0
  store i32* null, i32** %15, align 8
  ret void
}

declare dso_local i32 @free_page(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
